# Poseidon

./: .gitignore  Dockerfile  Procfile  README.md  api.py  attendance.py  erp.py  format.sh  imgPath.py  lint.sh  ping.py  pyproject.toml  requirements.txt  setup.sh  start.py  start.sh  systemName.py  telegram.py
.github/workflows/: docker-build.yaml
static/css/: main.css
templates/: login.html
